# semantic-health-ledger

./: .env.example  .gitignore  CLAUDE.md  LaunchLedger.vbs  PK_TEMPORAL_TRACKER_SPEC.md  README.md  api.py  garmin_auth.py  init_storage.py  ledger.ps1  ledger_cli.py  llm_service.py  memory_layer.py  models.py  pyproject.toml  reflection_worker.py  requirements.txt  setup.bat  setup.sh
frontend/: next.config.ts  package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatInput.tsx  ChatPanel.tsx  MessageList.tsx
frontend/src/components/dashboard/: BiometricsPanel.tsx  CompoundsPanel.tsx  Dashboard.tsx  JournalPanel.tsx  LabsPanel.tsx  LedgerThoughtsCard.tsx
frontend/src/components/journal/: ActiveTrackingBoard.tsx
frontend/src/components/ui/: RefRangeBar.tsx  StatusBadge.tsx
frontend/src/hooks/: useChatIngest.ts  useCheckIn.ts  useDashboardData.ts  usePdfIngest.ts  useTelemetry.ts
frontend/src/lib/: api.ts  types.ts
