[project]
name = "osassistant"
version = "0.1.0"
description = "Local health protocol logging backend."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "google-genai>=1.0,<2",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "mem0ai>=2.0,<3",
    "qdrant-client>=1.12,<2",
    "eval-type-backport>=0.3,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
